bugfix/etsl-791 fixed bullet point, alignment

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/header/top-navigation.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/header/top-navigation.scss
@@ -270,7 +270,7 @@ html[lang="ar"] {
     .links {
       li {
         a {
-          padding: 0 1.2rem;
+          padding: 0 0.5rem;
           position: relative;
           cursor: pointer;
           @media (min-width: 992px) and (max-width: 1366px) {
