--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/product-grid-text-section.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/product-grid-text-section.scss
@@ -2907,9 +2907,9 @@
           cursor: pointer;
 
           @include rtlBlock() {
-              display: flex;
-              padding: 0;
-            }
+            display: flex;
+            padding: 0;
+          }
 
           &::before {
             content: "";
@@ -3031,9 +3031,15 @@
       .paragraph-styling {
         ul {
           margin-left: 0 !important;
+          li {
+            position: relative;
+          }
         }
         ol {
           margin-left: 1rem !important;
+          li {
+            position: relative;
+          }
         }
       }
       .wst-main-headings {
